--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python: "2.7"
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
+ - ln -s ansible-role-unbound ../jdauphant.unbound
 install:
   - pip install ansible
   - ansible --version
