--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ env:
 #    version: 6
 #    init: /sbin/init
 #    run_opts: ""
-  - distribution: centos
-    version: 7
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+## FIXME! module error https://travis-ci.org/juju4/ansible-role-unbound/jobs/177210249#L2258
+#  - distribution: centos
+#    version: 7
+#    init: /usr/lib/systemd/systemd
+#    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
   - distribution: ubuntu
     version: 16.04
     init: /lib/systemd/systemd
@@ -71,7 +72,7 @@ script:
 
   # serverspec tests
 ## travis/docker: Errno::EROFS: Read-only file system @ dir_s_mkdir - /etc/ansible/roles/jdauphant.unbound/test/integration/default/serverspec/.bundle
-#  - 'sudo docker exec --tty "$(cat ${container_id})" /etc/ansible/roles/jdauphant.unbound/test/integration/default/serverspec/run-local-tests.sh'
+  - 'sudo docker exec --tty "$(cat ${container_id})" /etc/ansible/roles/jdauphant.unbound/test/integration/default/serverspec/run-local-tests.sh'
 
   # Clean up
   - 'sudo docker stop "$(cat ${container_id})"'
