--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ script:
 #  - 'sudo docker exec --tty "$(cat ${container_id})" /etc/ansible/roles/jdauphant.unbound/test/integration/default/serverspec/run-local-tests.sh'
 
 after_failure:
-  - sudo docker exec "$(cat ${container_id})" cat /etc/unbound/conf.d/80local-blocking-data.conf
+  - 'docker exec "$(cat ${container_id})" head -50 /etc/unbound/conf.d/80local-blocking-data.conf'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm systemctl -l --no-pager status unbound.service'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm journalctl -xe --no-pager'
 
