--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -5,7 +5,7 @@ driver:
 
 provisioner:
   name: ansible_playbook
-  roles_path: ../../roles
+  roles_path: ../
   hosts: test-kitchen
 #  ansible_verbose: true
   ansible_verbose: false
@@ -14,8 +14,10 @@ provisioner:
 #  name: chef_solo
 
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-7.1
+  - name: ubuntu-18.04
+  - name: ubuntu-16.04
+#  - name: ubuntu-14.04
+  - name: centos-7
 
 suites:
   - name: default
@@ -24,4 +26,8 @@ suites:
     provisioner:
       name: ansible_playbook
       hosts: test-kitchen
-
+  - name: default-noblackhole
+    run_list:
+    attributes:
+    includes:
+      - ubuntu-18.04
