--- a/tasks/blackhole.yml
+++ b/tasks/blackhole.yml
@@ -1,7 +1,7 @@
 ---
 
 ## Note: script used below is using local-data command to redirect to another IP
-##	alternative option is inform_deny eg 'local-zone: "google.com" inform_deny.'
+## alternative option is inform_deny eg 'local-zone: "google.com" inform_deny.'
 ## https://github.com/Aracktus/DNS-Unbound-Blocklist-Downloader
 ## https://github.com/aabed/DNSblacklist
 ## http://www.shellguardians.com/2016/08/building-dns-sinkhole-in-freebsd-with.html
@@ -9,9 +9,10 @@
 
 
 - name: Ensure script directory exists
-  file: "dest={{ item }} mode=0755 state=directory"
-  with_items:
-    - "{{ scriptsdir }}"
+  file:
+    dest: "{{ scriptsdir }}"
+    mode: '0755'
+    state: directory
 
 - name: check if script exists
   stat: path="{{ scriptsdir }}/dns-unbound-blocklist-downloader.py"
@@ -45,15 +46,23 @@
 - name: debian | ensure crontab is present
   package: name=cron state=present
   when: ansible_os_family == "Debian"
+  register: pkg_result
+  until: pkg_result is success
 
 - name: redhat | ensure crontab is present
   package: name=crontabs state=present
   when: ansible_os_family == "RedHat"
+  register: pkg_result
+  until: pkg_result is success
 
 - name: add update feed cron task
-  cron: name="unbound blackhole update" minute=35 hour=3
-    user="root" job="{{ scriptsdir }}/dns-unbound-blocklist-downloader.py -r > /tmp/dns-unbound-blocklist-downloader.out 2>&1"
-    cron_file=ansible_unbound-blackhole-update
+  cron:
+    name: "unbound blackhole update"
+    minute: 35
+    hour: 3
+    user: "root"
+    job: "{{ scriptsdir }}/dns-unbound-blocklist-downloader.py -r > /tmp/dns-unbound-blocklist-downloader.out 2>&1"
+    cron_file: ansible_unbound-blackhole-update
 
 - name: add blackholing of known bad TLDs
   template:
