--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,18 +2,20 @@
 
 - name: install unbound
   package: pkg=unbound state={{ unbound_pkg_state }}
-  when: unbound_only_zones == false
-  tags: ["packages","unbound"]
+  when: not unbound_only_zones
+  tags: ["packages", "unbound"]
+  register: pkg_result
+  until: pkg_result is success
 
 - name: Ensure zones folder exist
-  file: path=/etc/unbound/conf.d state=directory mode=755
+  file: path=/etc/unbound/conf.d state=directory mode=0755
   notify: restart unbound
-  tags: ["configuration","unbound"]
+  tags: ["configuration", "unbound"]
 
 - name: Ensure log file exist
-  file: path={{ unbound_logfile }} state=touch mode=755 owner=unbound
+  file: path={{ unbound_logfile }} state=touch mode=0755 owner=unbound
   notify: restart unbound
-  tags: ["configuration","unbound"]
+  tags: ["configuration", "unbound"]
 
 - name: configure add independant config file
   template:
@@ -23,8 +25,8 @@
      - 01general.conf
      - 99forward_zone.conf
   notify: restart unbound
-  when: unbound_only_zones == false
-  tags: ["configuration","unbound"]
+  when: not unbound_only_zones
+  tags: ["configuration", "unbound"]
 
 - name: configure unbound zones
   template:
@@ -32,7 +34,7 @@
      dest="/etc/unbound/conf.d/10{{ item.name }}.conf"
   with_items: "{{ unbound_zones }}"
   notify: restart unbound
-  tags: ["configuration","unbound"]
+  tags: ["configuration", "unbound"]
 
 - name: check root.key status
   stat: path=/var/lib/unbound/root.key
@@ -51,18 +53,18 @@
      dest=/etc/unbound/unbound.conf
      validate="/usr/sbin/unbound-checkconf %s"
   notify: restart unbound
-  tags: ["configuration","unbound"]
-  when: not unbound_security == true
+  tags: ["configuration", "unbound"]
+  when: not unbound_security
 - name: configure unbound.conf to include all configuration (chroot/can't validate)
   template:
      src=unbound.conf.j2
      dest=/etc/unbound/unbound.conf
   notify: restart unbound
-  tags: ["configuration","unbound"]
-  when: unbound_security == true
+  tags: ["configuration", "unbound"]
+  when: unbound_security
 
 - include: debian-chroot.yml
-  when: unbound_security == true and (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
+  when: unbound_security and (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
 
 - debug: var=unbound_service_enabled
 - name: ensure unbound is started/stopped
@@ -72,7 +74,7 @@
      enabled={{ unbound_service_enabled }}
 ## [WARNING]: Ignoring "pattern" as it is not used in "systemd"
 #     pattern="unbound"
-  tags: ["service","unbound"]
+  tags: ["service", "unbound"]
   when: not (ansible_virtualization_type is defined and ansible_virtualization_type == "docker")
 
 - name: Redhat | Update NetworkManager DNS config
