travis: test fix ansible 2.9.14

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,26 +7,32 @@ env:
     version: 8
     init: /usr/lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
+    ansible_version: 2.9.14
   - distribution: centos
     version: 7
     init: /usr/lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
+    ansible_version: 2.9.14
   - distribution: ubuntu
     version: 20.04
     init: /lib/systemd/systemd
     run_opts: ""
+    ansible_version: 2.9.14
   - distribution: ubuntu
     version: 18.04
     init: /lib/systemd/systemd
     run_opts: ""
+    ansible_version: 2.9.14
   - distribution: ubuntu
     version: 16.04
     init: /lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
+    ansible_version: 2.9.14
   - distribution: debian
     version: 10
     init: /lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
+    ansible_version: 2.9.14
 
 services:
   - docker
@@ -48,6 +54,7 @@ script:
     # Run container in detached state
   - 'sudo docker run --detach --volume="${PWD%/*}":/etc/ansible/roles:ro ${run_opts} ${distribution}-${version}:ansible "${init}" > "${container_id}"'
 
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm pip install ansible==${ansible_version}'
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --version'
 
   # Ansible syntax check.
