--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     init: /usr/lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
     ansible_version: 2.9.14
+    ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
   - distribution: centos
     version: 7
     init: /usr/lib/systemd/systemd
@@ -18,11 +19,13 @@ env:
     init: /lib/systemd/systemd
     run_opts: ""
     ansible_version: 2.9.14
+    ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
   - distribution: ubuntu
     version: 18.04
     init: /lib/systemd/systemd
     run_opts: ""
     ansible_version: 2.9.14
+    ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
   - distribution: ubuntu
     version: 16.04
     init: /lib/systemd/systemd
@@ -33,6 +36,7 @@ env:
     init: /lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
     ansible_version: 2.9.14
+    ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
 
 services:
   - docker
@@ -59,15 +63,15 @@ script:
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --connection=local -m setup localhost'
 
   # Ansible syntax check.
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/jdauphant.unbound/test/integration/default/default.yml --syntax-check'
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/jdauphant.unbound/test/integration/default/default.yml --syntax-check ${ANSIBLE_EXTRA_FLAGS}'
 
   # Test role.
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/jdauphant.unbound/test/integration/default/default.yml -vvv'
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/jdauphant.unbound/test/integration/default/default.yml -vvv ${ANSIBLE_EXTRA_FLAGS}'
 
   # Test role idempotence.
 ## known fail
   - >
-    sudo docker exec "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/jdauphant.unbound/test/integration/default/default.yml
+    sudo docker exec "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/jdauphant.unbound/test/integration/default/default.yml ${ANSIBLE_EXTRA_FLAGS}
     | tee /tmp/idempotency.log
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
