--- a/.travis.yml
+++ b/.travis.yml
@@ -7,35 +7,29 @@ env:
     version: 8
     init: /usr/lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
-    ansible_version: 2.9.14
     ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
   - distribution: centos
     version: 7
     init: /usr/lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
-    ansible_version: 2.9.14
   - distribution: ubuntu
     version: 20.04
     init: /lib/systemd/systemd
     run_opts: ""
-    ansible_version: 2.9.14
     ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
   - distribution: ubuntu
     version: 18.04
     init: /lib/systemd/systemd
     run_opts: ""
-    ansible_version: 2.9.14
     ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
   - distribution: ubuntu
     version: 16.04
     init: /lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
-    ansible_version: 2.9.14
   - distribution: debian
     version: 10
     init: /lib/systemd/systemd
     run_opts: "'--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro'"
-    ansible_version: 2.9.14
     ANSIBLE_EXTRA_FLAGS: "'-e ansible_python_interpreter=/usr/bin/python3'"
 
 services:
@@ -58,7 +52,7 @@ script:
     # Run container in detached state
   - 'sudo docker run --detach --volume="${PWD%/*}":/etc/ansible/roles:ro ${run_opts} ${distribution}-${version}:ansible "${init}" > "${container_id}"'
 
-  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm pip install ansible==${ansible_version}'
+  - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm pip install ansible'
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --version'
   - 'sudo docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible --connection=local -m setup localhost'
 
