--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -84,7 +84,7 @@
     line: 'DNS1=127.0.0.1'
     backup: yes
   when: >
-    ansible_os_family == "RedHat"
+    (ansible_os_family == 'RedHat' and ansible_distribution_major_version|int <= 7)
     and ansible_default_ipv4 is defined and ansible_default_ipv4|string
 
 - name: Redhat | Update current resolv.conf
